tests/invalid/simple/ListAppend_Invalid_2.whiley
[string] f([string] args):
    return r

void System::main([string] args):
    l = [1,2,3]
    r = args + l
    f(r)
    print str(r)
